# Showcase_Everything

./: .gitattributes  Cargo.toml  Dockerfile  Main.java  Makefile  README.md  Token.sol  adder.vhd  analysis.hql  app.asm  app.clj  app.cob  app.coffee  app.cr  app.cs  app.dart  app.elm  app.erl  app.ex  app.f90  app.fs  app.groovy  app.hs  app.jl  app.kt  app.lua  app.m  app.ml  app.nim  app.pl  app.ps1  app.r  app.scala  app.swift  app.ts  app.vim  app.zig  config.yml  counter.v  index.html  (+18 more)
.github/workflows/: ci.yml  codeql.yml
