[package]
name = "polyglot-showcase"
version = "0.1.0"
edition = "2021"
authors = ["Developer <dev@example.com>"]
description = "A polyglot showcase repository"
license = "MIT"
repository = "https://github.com/example/polyglot-showcase"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }

[dev-dependencies]
criterion = "0.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
